<resources>
    <string name="app_name">TrabalhoViagem2</string>
    <string name="btnEntrar">ENTRAR</string>
    <string name="btnCriar">Criar Conta</string>
    <string name="txtPassword">Senha</string>
    <string name="txtUsers">Usuário</string>
    <string name="txtErro1">⚠ Usuario ou Senha Incorreto! ⚠</string>
    <string name="txtErro2">⚠ Operação inválida. Todas as mesas já possuem reserva! ⚠</string>
    <string name="txtSelecioneoption">Selecione uma opção abaixo</string>
    <string name="txtNovaviagem">Nova viagem</string>
    <string name="txtMinhasviagem">Minhas viagens</string>
    <string name="txtTelacombpass">Combustivel e Passagens</string>
    <string name="txtGasolina">Gasolina</string>
    <string name="txtLine">_______________________________________________________________</string>
    <string name="txtKm">Km:</string>
    <string name="txtEstimatedKm">Total estimado de quilômetro</string>
    <string name="txtKml">Km/L:</string>
    <string name="txtIndKML">Média de quilômetros por litro</string>
    <string name="txtCustoL">Valor litro:</string>
    <string name="txtCustoMedioL">Custo médio por litro</string>
    <string name="txtQtdVei">Veículos:</string>
    <string name="txtQtdTotalVei">Total de veículos</string>
    <string name="txtPassagem">Passagem</string>
    <string name="txtPess">Custo/Pessoa:</string>
    <string name="txtEstimatedPess">Custo estimado por pessoa</string>
    <string name="txtAluVei">Aluguel de Auto:</string>
    <string name="txtValorAluVeic">Valor do aluguel de veiculos</string>
    <string name="txtAvancar">Avançar</string>
    <string name="txtBack">Voltar</string>
    <string name="txtFinish">Finalizar/Relatorio</string>
    <string name="txtTelaHotAli">Refeições e Hotéis</string>
    <string name="txtRefeicao">Refeições</string>
    <string name="txtCustRei">Custo.:</string>
    <string name="txtIndCustRei">Custo por refeição</string>
    <string name="txtQtdRei">Quantidade:</string>
    <string name="txtIndQtdRei">Quantidade de refeições</string>
    <string name="txtHotel">Hotel</string>
    <string name="txtCustoMedioN">Custo/Noite:</string>
    <string name="txtIndCustoMedioN">Custo médio (por noite)</string>
    <string name="txtQtdNoites">Qtd noites:</string>
    <string name="txtIndQtdnoites">Quantidade de noites</string>
    <string name="txtQtdQuartos">Qtd quartos:</string>
    <string name="txtIndQtdQuartos">Quantidade de quartos</string>
    <string name="txtEntDiv">Entretenimento e Diversos</string>
    <string name="txtDesc">Descreva aqui</string>
    <string name="txtEntreDiv">Valor do entretenimento</string>
    <string name="txtInf">Informações Da Viajem</string>
    <string name="txtInfPessoas">Qtd Viajantes:</string>
    <string name="txtIndQtdPessoas">Quantos Viajantes</string>
    <string name="txtInfDuracao">Duração da viagem:</string>
    <string name="txtDuracaoViajem">Dias de Viagem</string>
    <string name="txtRelatorio">Relatório</string>
    <string name="txtInfRelTotViaj">Total de Viajantes:</string>
    <string name="txtInfRelCustTot">Custo total da viagem:</string>
    <string name="txtInfRelCustPessoas">Custo total por pessoa:</string>
    <string name="btnSalvarViagem">Salvar Viagem</string>
    <string name="txtInfNameTrip">Nome da viagem:</string>
    <string name="txtMyTrip">Minhas Viagens</string>
</resources>