<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/linearCor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/black">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/txtSelecioneoption"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light">
        </TextView>

    </LinearLayout>

    <Button
        android:layout_marginTop="300dp"
        android:id="@+id/btnNewtrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/txtNovaviagem"
        android:textColor="@color/white"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"/>

    <Button
        android:id="@+id/btnMytrips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/txtMinhasviagem"
        android:textColor="@color/white"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"/>

</LinearLayout>