<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearCor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/black"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/txtRelatorio"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light">
        </TextView>

    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/relatorio"
        android:layout_marginBottom="30dp"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="180dp"
            android:layout_height="25dp"
            android:text="@string/txtInfRelTotViaj"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:textSize="17dp"
            android:layout_marginTop="4dp">
        </TextView>

        <EditText
            android:id="@+id/txtTotalViajantes"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:layout_marginTop="10dp">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">
        <TextView
            android:layout_width="180dp"
            android:layout_height="25dp"
            android:text="@string/txtInfDuracao"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:textSize="17dp"
            android:layout_marginTop="4dp">
        </TextView>

        <EditText
            android:id="@+id/txtDuracaoViagem"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:layout_marginTop="10dp">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">
        <TextView
            android:layout_width="180dp"
            android:layout_height="25dp"
            android:text="@string/txtInfRelCustTot"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:textSize="17dp"
            android:layout_marginTop="4dp">
        </TextView>

        <EditText
            android:id="@+id/txtCustoTotalViagem"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:layout_marginTop="10dp">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp">

        <TextView
            android:layout_width="180dp"
            android:layout_height="25dp"
            android:text="@string/txtInfRelCustPessoas"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:textSize="17dp"
            android:layout_marginTop="4dp">
        </TextView>

        <EditText
            android:id="@+id/txtCustoTotalPorPessoa"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:layout_marginTop="10dp">
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btnRetornar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/txtBack"
        android:textColor="@color/white"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="15dp"
        />

</LinearLayout>